# memect-ppx

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  PPX_CLA.md  README.md  README_zh-CN.md  agent-sample.json  cliff.toml  install.py  install.sh  ppx  ppx.bat  pyproject.toml  version.txt
.claude/commands/: release.md  sync-skills2clawhub.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: python-package.yml
.github/workflows/ISSUE_TEMPLATE/: config.yml
docs/: BENCHMARKS.md  THIRD_PARTY_LICENSES.md
docs/release/: OPEN_SOURCE_ARTICLE_ZH.md
scripts/: release_changelog.sh  release_tag.sh
skills/memect-ppx/: .clawhubignore  SKILL.md
skills/memect-ppx/references/: troubleshooting.md
skills/memect-ppx/scripts/: check_ppx_env.sh  sync_version.py
skills/ppx-parse/: SKILL.md
skills/ppx-parse/references/: backend-config.md  cli-options.md
src/: ppx.py
src/memect/: app.py  cli.py  nvidia_path.py
src/memect/agent/: __init__.py  chapter_doctor.py  doctor.py  parse_doctor.py
src/memect/agent2/: __init__.py  chapter_iter.py  evaluator.py  models.py  proposer.py
src/memect/base/: api.py  bbox.py  config.py  debug.py  images.py  job.py  lists.py  matrix.py  pattern.py  pdfs.py  sdk.py  strs.py  task.py  test.py  utils.py  zip.py
src/memect/conf/: __init__.py  log.custom.py  log.default.py  settings.custom.py  settings.default.py
src/memect/conf/table_dicts/patterns/: 1.txt  readme
src/memect/conf/table_dicts/txts/: 1.txt  2.txt  3.txt  readme
src/memect/conf/text_dicts/patterns/: 1.py
src/memect/models/: __init__.py
src/memect/pdf/: __init__.py  base.py  chars.py  commons.py  docx.py  font.py  formula.py  formula_mfr.py  formula_pp.py  grid.py  model.py  otsl.py  parser.py  patch_rapid_latex_ocr.py  patch_rapid_layout.py  patch_table_cls.py  pdf2image.py  plane.py  pptx.py  service.py  sort.py  table_builder.py  table_det.py  vline.py  watermark.py  wingdings.py
src/memect/pdf/backup/: formula_model.py  layout.py  otsl_ai.py  watermark.py
src/memect/pdf/default/: block.py  footer.py  footnote.py  header.py  order.py  other.py  parser.py  part.py  pdf.py  pdf_pdfoxide.py  pdf_pymupdf.py  toc.py
src/memect/pdf/default/feature/: __init__.py  definition.py
src/memect/pdf/default/table/: _wbk.py  _wbk_ai.py  _wbk_default.py  _wbk_default2.py  _wbk_locator.py  _wtable.py  auto.py  builder.py  filler.py  line.py  lineparser.py  llm.py  parser.py  wbk.py  xprepare.py  ybk.py
src/memect/pdf/default/tree/: parser.py
src/memect/pdf/fonts/: __init__.py  tool.py
src/memect/pdf/html/: __init__.py  doc copy.html  doc.html  doc.js  renderer.py
src/memect/pdf/llm/: deepseek.py  glm.py  llm.py  paddle.py
src/memect/pdf/x/: xbase.py  xchapter.py  xchapter_default.py  xchapter_llm.py  xgroup.py  xno.py  xtable.py  xtext.py  xtoc.py  xtree.py  xtree_default.py  xtree_llm.py  xtree_outline.py  xtree_toc.py
src/memect/web/: index.css  index.html  index.js  package.json
