[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"

[project]
name = 'ppx'
version = '0.1'
requires-python = ">= 3.12"
dependencies = [
    "anyio>=4.12.1",
    "beautifulsoup4>=4.14.3",
    "concurrent-log-handler>=0.9.29",
    "fastapi>=0.135.1",
    "filetype>=1.2.0",
    "fonttools>=4.62.1",
    "freetype-py>=2.5.1",
    "httpx[brotli,http2,socks]>=0.28.1",
    "openai>=2.29.0",
    "orjson>=3.11.7",
    #"pdf-oxide>=0.3.17",
    "pillow>=12.1.1",
    "pptx-ea-font>=0.0.4",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2",
    "pypdf>=6.9.1",
    "python-multipart>=0.0.22",
    "python-pptx>=1.0.2",
    "rapid-layout>=1.2.1",
    "rapidocr>=3.8.1",
    "rich>=14.3.3",
    "shapely>=2.1.2",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.42.0",
    #windows/linux/mac(仅仅支持2025.4.1，最新的不支持intel cpu),x86_64
    #mac(arm64)
    #windows/linux，arm64没有机器测试，暂时就不安装了
    "openvino>=2025.4.1; platform_machine == 'x86_64' or platform_machine == 'AMD64' or sys_platform=='darwin'",
    #arm的，仅仅支持mac和linux，但是没有机器测试和onnxruntime的性能对比
    #"openvino>=2025.4.1; (sys_platform == 'darwin' and platform_machine == 'arm64' or sys_platform == 'linux' and platform_machine == 'aarch64')",
    "psutil>=7.2.2",
    "filelock>=3.25.2",
    "pyclipper>=1.4.0",
    "rapidfuzz>=3.14.5",
    "huggingface_hub",
    "modelscope"
]

[project.scripts]
# 格式: "命令名 = "Python模块路径:函数名""
ppx = "memect.cli:main"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

# ── index 配置 ────────────────────────────────────────────────────
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
#cu126,cu128,cu130
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pypi"
#url = "https://pypi.org/simple"
# url = "https://mirrors.aliyun.com/pypi/simple"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true


[tool.uv]
override-dependencies = [
    # 排除所有 opencv 相关的包
    "opencv-python ; sys_platform == 'never'",
    "opencv-contrib-python ; sys_platform == 'never'",
    "opencv-python-headless ; sys_platform == 'never'",
    "opencv-contrib-python-headless ; sys_platform == 'never'",
    # 排除所有 onnxruntime
    "onnxruntime;sys_platform == 'never'",
    "onnxruntime-gpu;sys_platform == 'never'",
    #排除torch
    "torch;sys_platform == 'never'",
    "torchvision;sys_platform == 'never'",
]
constraint-dependencies = ["polars>=1.40"]
